correct contrast and added alt tags to some images

--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -133,7 +133,7 @@ color: #dce0d9;
 
 .accent1 {
     background-color: #596869;
-    color: #dce0d9;
+    color: #ffffff;
 }
 
 .accent2 {
